Revision history for Perl extension Module::Build.


0.27_01 (Beta for 0.28)

 - Refactored methods relating to parsing perl module files for package,
   version, and pod data into a new class: Module::Build::ModuleInfo.

 - Split documentation into two sections. The user level documentation
   and overview remains in 'Module/Build.pm', while a new document,
   'Module/Build/Authoring.pod', has been created for module authors.

 - The creation of Unix man pages is no longer a strict necessity - it
   has now been turned into an 'auto-feature' contingent on the
   presence of Pod::Man, and when distributions are being built we
   skip building man pages when there's no location specified for them
   to go.

 - When copying files in the 'distdir' action, set permissions to match
   the original files. [Julian Mehnle]

 - When adding files like META.yml to the MANIFEST, we now tell the
   user we're doing so by printing one of the "Added to MANIFEST: ..."
   lines.  [Ron Savage]

 - Added a runtime_params() method, which lets a module author see
   which parameters were overridden by the user on the command line
   (or in whatever paradigm the user originally invoked Module::Build
   from). [David Wheeler]

 - A user-specified 'install_path' setting will now take precedence
   over an 'install_base' setting.  This allows the user to use
   'install_base' to set the base for all elements in one go, and then
   use 'install_path' to override specific paths or add paths for
   additional kinds of targets.

 - Added the current_action() method, which, surprisingly, returns the
   name of the currently running action. [David Wheeler]

 * When using the 'install_base' option to choose a directory for
   installing everything, perl modules now go into lib/perl5/ instead
   of just lib/.  It seems this is more consistent with people's
   expectations, and the way I had it before was a bit peculiar to the
   way I like things in my own home directory. [Michael Schwern]
